--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -4,5 +4,11 @@ $sidebar-sm-columns:    4;
 
 // Colors
 $brand-primary:         #245892;
+$brand-secondary:		#FFF;
+$color-text:			#1F1F1F;
+$color-hover:			#0f0e3a;
 
-
+$font-family: "Lato";
+$font-size: 16px;
+$line-height: 1.8;
+$letter-spacing: 0.5px;
