--- a/assets/styles/components/_forms.scss
+++ b/assets/styles/components/_forms.scss
@@ -13,3 +13,27 @@
   @extend .btn;
   @extend .btn-secondary;
 }
+
+.search-form .search-field {
+	border-radius: 0;
+	border: 3px solid rgba(0,0,0,0.1);
+	color: $color-text;
+	line-height: 1;
+	padding: 7px 20px;
+}
+
+.search-form .search-submit {
+	font-family: $font-family;
+	border-radius: 0;
+	border: 1px solid $brand-primary;
+	line-height: 1;
+	padding: 10px 20px;
+	box-shadow: none;
+}
+
+.search-form .search-submit:hover {
+	box-shadow: none;
+	border-color: $brand-primary;
+	background-color: $brand-primary;
+	color: $brand-secondary;
+}
